--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.16.0",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
+    "inngest": "^3.40.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
